--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,11 +1,14 @@
 {
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": [ "/images/*.{png,jpg,gif}", "/css/*" ]
+    "exclude": ["/images/*.{png,jpg,gif}", "/css/*"]
   },
   "globalHeaders": {
     "X-Frame-Options": "SAMEORIGIN",
+    "X-Content-Type-Options": "nosniff",
+    "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
+    "Content-Security-Policy": "default-src 'self'; style-src 'self' https://fonts.googleapis.com/ 'unsafe-inline'; connect-src 'self' https://booznovenueqa.api.dweb.in/api/ ws://localhost:3000/ https://booznovenueuat.api.dweb.in/api/ https://booznoapi-hmffgzeshmd7adff.centralindia-01.azurewebsites.net/api/; img-src 'self' https://booznodocument.blob.core.windows.net data: blob:; font-src 'self' https://fonts.gstatic.com data:; object-src 'none'; frame-src 'none'; frame-ancestors 'self'; form-action 'self'; script-src 'self';",
     "Referrer-Policy": "no-referrer",
-    "Permissions-Policy": "geolocation=()"
+    "Permissions-Policy": "geolocation=(), microphone=()"
   }
 }
